<resources>
    <string name="app_name">Story on Site</string>
    <string name="current_location">Current Location</string>
    <string name="take_picture">Take Picture</string>
    <string name="add_text">Add Text</string>
    <string name="video">VIDEO</string>
    <string name="samuel_ipsum">The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother\'s keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</string>
    <string name="skip">Skip</string>
    <string name="hello">Hello</string>
    <string name="login">Login</string>
    <string name="place_holder">This is a PlaceHolder for the View to Come</string>
    <string name="explore_btn_text">Explore</string>
    <string name="create_btn_state">Create Your Own Story</string>
    <string name="sign_out">Sign Out</string>
    <string name="location_label">Location:</string>
    <string name="points_of_interest">Points of Interest</string>
    <string name="create">Create</string>
    <string name="featured">Featured</string>
    <string name="profile">My Profile</string>
    <string name="preview_your_story_here">Preview Your Story Here</string>
    <string name="create_your_own_story">Create Your Own Story</string>
    <string name="create_prompt">Help create our collective history by leaving your personal story/experience with this space here. Write a thoughtful story, snap a pic or take a video. Then save to add to the map for others to experience.</string>
    <string name="save">SAVE</string>
    <string name="sign_in_menu">Sign In</string>
    <string name="user_profile_menu">Profile</string>
    <string name="share_story">Share Your Story</string>
    <string name="camera">CAMERA</string>
    <string name="select_image">PICK IMAGE</string>
    <string name="addstory_edittext_hint">Add your story or description of the photo you are uploading here.</string>
    <string name="new_post">New Post</string>
    <string name="share_user_photo">Share</string>
    <string name="delete_user_photo">Delete</string>
    <string name="location_name">Location Name</string>
    <string name="get_profile_pic">Select Profile Picture From</string>
    <string name="cancel">Cancel</string>
    <string name="share">SHARE</string>
    <string name="bio">Bio</string>
    <string name="chooser_title">Choose how you want to share</string>
    <string name="search">Search</string>
    <string name="Enter_search_loc"> Enter Search Location Here</string>

    <string-array name="camera_or_gallery">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="start_with_a_video">Start with a video</string>
</resources>
