<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_point_of_interest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nyc.c4q.helenchan.makinghistory.LandingPageActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/HelloTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello" />

        <Button
            android:id="@+id/login_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:visibility="invisible" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
            android:background="@color/primary"
            android:id="@+id/point_interest_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/accent"
                android:gravity="center"
                android:text="@string/points_of_interest"
                android:textAllCaps="true"
                android:textColor="@color/white_text"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <FrameLayout
            android:background="@color/primary"
            android:id="@+id/explore_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/accent"
                android:gravity="center"
                android:text="@string/explore_btn_text"
                android:textAllCaps="true"
                android:textColor="@color/white_text"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
</android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <FrameLayout
            android:background="@color/primary"
            android:id="@+id/create_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/accent"
                android:gravity="center"
                android:text="@string/create_btn_state"
                android:textAllCaps="true"
                android:textColor="@color/white_text"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
</android.support.v7.widget.CardView>
    </RelativeLayout>

</LinearLayout>
